Fix bug causing one page layouts to be too wide on xl desktops

--- a/web/themes/custom/union_register/scss/layout/_one-column.scss
+++ b/web/themes/custom/union_register/scss/layout/_one-column.scss
@@ -1,8 +1,4 @@
 .layout-container--commerce {
-  @include medium {
-    grid-template-columns: [left-gutter] 1fr [content] 22fr [right-gutter] 1fr;
-  }
-
   main {
     grid-column: content/right-gutter;
   }
